--- a/app.json
+++ b/app.json
@@ -28,7 +28,7 @@
       "required": false
     },
     "ALIVE_NAME": {
-      "description": "Fill your Full name or Username like @Ceowhitehatcracks",
+      "description": "Fill your Full name or Username like @ZALA_KI_MAA_RANDI_HAI",
       "value": ""
     },
     "APP_ID": {
