--- a/app.json
+++ b/app.json
@@ -24,8 +24,7 @@
     },
     "ALIVE_NAME": {
       "description": "Fill your Full name or Username like @ZALA_KI_MAA_RANDI_HAI",
-      "value": ""
-      "required": false
+      "value": "ZALA KA BAAP "
     },
     "APP_ID": {
       "description": "Get this value from my.telegram.org! Please do not steal",
@@ -47,7 +46,7 @@
     },
     "PLUGIN_CHANNEL": {
       "description": "Create a private group add rose  then type /id. PLUGIN_CHANNEL and PRIVATE_GROUP_ID both values should be same",
-      "value": ""
+      "value": "-1001478575363"
     },
     "PRIVATE_GROUP_ID": {
       "description": "Create a private group add rose bot then type /id. PLUGIN_CHANNEL and PRIVATE_GROUP_ID both values should be same",
@@ -55,7 +54,7 @@
     },
     "STRING_SESSION": {
       "description": "Get this value from Termux Python 3",
-      "value": "-1001478575363"
+      "value": ""
     },
     "GITHUB_ACCESS_TOKEN": {
       "description": "Your Github Access Token for gitcommit plugin.Google 'Github access token' to find.",
@@ -74,11 +73,11 @@
     },
     "HEROKU_API_KEY": {
       "description": "Go to https://dashboard.heroku.com/account, scroll down and press Reveal API.Required for updater to work.",
-      "value": ""
+      "value": "later"
     },
     "HEROKU_APP_NAME": {
       "description": "The Value of App Name you filled in right on top.Required for updater to work.",
-      "value": ""
+      "value": "LATER"
     },
     "SUDO_USERS": {
       "description": "Makes your acc and bot stable",
